# pnp

./: README.md
.github/workflows/: docker-image.yml
building/local/: build_image.sh
building/scripts/: code_checks.sh
code/: CMakeLists.txt
code/include/pnp/: pnp.hpp
code/src/: camera_matrix_decomposition.cpp  camera_matrix_decomposition.hpp  camera_matrix_decomposition.test.cpp  dlt.cpp  dlt.hpp  dlt.test.cpp  matrix_utilities.cpp  matrix_utilities.hpp  matrix_utilities.test.cpp  multiple_view_geometry_data_generator.cpp  multiple_view_geometry_data_generator.hpp  multiple_view_geometry_data_generator.test.cpp  nonlinear_refinement.cpp  nonlinear_refinement.hpp  nonlinear_refinement.test.cpp  pnp.cpp  temp_geometric_transforms.test.cpp  test_data.hpp
code/test/: pnp.test.cpp  test_pnp.cpp
